build the new files
